--- a/openvidu-testapp/src/styles.css
+++ b/openvidu-testapp/src/styles.css
@@ -22,7 +22,8 @@ ul {
 }
 
 video {
-  width: 125px;
+  width: 120px;
+  height: 90px;
 }
 
 button {
@@ -44,7 +45,7 @@ button {
 .video-container div.data-node {
   float: left;
   position: relative;
-  margin-left: -125px;
+  margin-left: -120px;
   margin-top: -14px;
 }
 
@@ -52,8 +53,30 @@ button {
   background: #ffffff;
   padding-left: 5px;
   padding-right: 5px;
-  color: #4d4d4d;
+  color: #797979;
   font-weight: 100;
   font-size: 14px;
   border-bottom-right-radius: 2px;
+}
+
+.mat-expansion-panel-body {
+  font-size: 9.5px !important;
+  padding: 0 9px 0px !important;
+  background-color: white;
+  border: 3px solid #e0e0e0;
+  line-height: 13px;
+  padding: 4px 7px 3px 7px !important;
+  word-break: break-all;
+}
+
+.mat-expansion-indicator {
+  display: none;
+}
+
+.mat-expansion-indicator::after {
+  display: none;
+}
+
+.mat-expansion-panel-spacing {
+  margin: 3px 0 !important;
 }
