--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.css
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.css
@@ -89,7 +89,7 @@ md-radio-button {
   color: #4d4d4d;
 }
 
-.event-list {
+.event-list-div {
   display: inline-block;
   width: 125px;
   height: 183.5px;
@@ -108,9 +108,9 @@ md-chip {
 }
 
 .scroll-custom::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #F5F5F5;
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
+  background-color: #e0e0e0;
 }
 
 .scroll-custom::-webkit-scrollbar {
