--- a/openvidu-testapp/src/app/app.component.html
+++ b/openvidu-testapp/src/app/app.component.html
@@ -8,10 +8,10 @@
   </md-toolbar>
   <main>
     <md-form-field>
-      <input mdInput placeholder="OpenVidu Server URL" [ngModel]="openviduURL" (ngModelChange)="updateUrl($event)">
+      <input id="openvidu-url" mdInput placeholder="OpenVidu Server URL" [ngModel]="openviduURL" (ngModelChange)="updateUrl($event)">
     </md-form-field>
     <md-form-field>
-      <input mdInput placeholder="OpenVidu Server Secret" [ngModel]="openviduSecret" (ngModelChange)="updateSecret($event)">
+      <input id="openvidu-secret" mdInput placeholder="OpenVidu Server Secret" [ngModel]="openviduSecret" (ngModelChange)="updateSecret($event)">
     </md-form-field>
     <router-outlet></router-outlet>
   </main>
